modification de la bi-list et de la bi-person-circle

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,9 +15,9 @@
 
     <div class="chat-container">
         <header class="chat-header">
-            <i class="bi bi-list fs-3 text-primary" style="cursor:pointer" data-bs-toggle="offcanvas" data-bs-target="#historySidebar"></i>
+            <i class="bi bi-list fs-3 text-white" style="cursor:pointer" data-bs-toggle="offcanvas" data-bs-target="#historySidebar"></i>
             <div class="fw-bold fs-5">Sup One AI</div>
-            <i class="bi bi-person-circle fs-3 text-primary" style="cursor:pointer" data-bs-toggle="modal" data-bs-target="#profileModal"></i>
+            <i class="bi bi-person-circle fs-3 text-white" style="cursor:pointer" data-bs-toggle="modal" data-bs-target="#profileModal"></i>
         </header>
 
         <main class="chat-body" id="chatContent">
