--- a/frontend/advanced_chat/index.html
+++ b/frontend/advanced_chat/index.html
@@ -56,19 +56,15 @@
             <div class="suggestions-grid" id="suggestions">
                 <button class="suggestion-card" data-question="Quelle est l'histoire de SUP'PTIC ?">
                     <span class="suggestion-icon"><i class="bi bi-book"></i></span>
-                    <span class="suggestion-text">Histoire de l'école</span>
+                    <span class="suggestion-text">Quelle est l'histoire de SUP'PTIC ?</span>
                 </button>
                 <button class="suggestion-card" data-question="Comment louer une chambre universitaire ?">
                     <span class="suggestion-icon"><i class="bi bi-house"></i></span>
-                    <span class="suggestion-text">Logement étudiant</span>
+                    <span class="suggestion-text">Comment louer une chambre universitaire ?</span>
                 </button>
                 <button class="suggestion-card" data-question="Quels sont les clubs disponibles ?">
                     <span class="suggestion-icon"><i class="bi bi-bullseye"></i></span>
-                    <span class="suggestion-text">Clubs & activités</span>
-                </button>
-                <button class="suggestion-card" data-question="Quelles sont les filières disponibles ?">
-                    <span class="suggestion-icon"><i class="bi bi-book-half"></i></span>
-                    <span class="suggestion-text">Formations</span>
+                    <span class="suggestion-text">Quels sont les clubs disponibles ?</span>
                 </button>
             </div>
         </main>
@@ -85,6 +81,16 @@
 
         <!-- Toast de notification -->
         <div id="toast" class="toast" role="status" aria-live="polite"></div>
+    </div>
+
+    <!-- Section de statistiques (pour vérifier les feedbacks) -->
+    <div id="stats-container" style="display: none;">
+        <button id="show-stats-btn" class="stats-toggle"><i class="bi bi-bar-chart"></i> Statistiques</button>
+        <div id="stats-panel" class="stats-panel">
+            <h3>Statistiques des FAQs</h3>
+            <button id="close-stats" class="close-btn"><i class="bi bi-x-lg"></i></button>
+            <div id="stats-content"></div>
+        </div>
     </div>
 
     <script type="module" src="main.js"></script>
